--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     <h1 class="title">2023년 신년계획</h1>
     <p class="msg">올해는 꼭 알차게!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img5-t5 center">기타 배우기</div>
-        <div class="bucket img2-t2 center">밴드 동아리</div>
-        <div class="bucket img2-t3 center">코딩 동아리</div>
-        <div class="bucket img1-t3 center">롤 티어 올리기</div>
-        <div class="bucket img2 center">혼자 여행가기</div>
-        <div class="bucket img1-t4 center">학점 4.1점대 유지</div>
+        <div class="bucket img1 center">기타 배우기</div>
+        <div class="bucket img2 center">밴드 동아리</div>
+        <div class="bucket img2 center">코딩 동아리</div>
+        <div class="bucket img1 center">롤 티어 올리기</div>
+        <div class="bucket img1 center">혼자 여행가기</div>
+        <div class="bucket img2 center">학점 4.1점대 유지</div>
     </div>
 </body>
 
